# SimpleFileUtils

./: LICENSE  README.md  main.py  pyproject.toml
simple_file_utils/: __init__.py  core.py
