[project]
name = "simple-file-utils"
version = "0.1.0"
description = "A beginner-friendly library for simplified file handling in Python."
readme = "README.md"
authors = [
  { name = "M.R. Darshan" }
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
